--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -101,7 +101,9 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "exclude": [
+    "./jest.config.ts",
     "./node_modules",
+    "./tests",
     "./build"
   ]
 }
